--- a/static/css/noobnews.css
+++ b/static/css/noobnews.css
@@ -1,6 +1,6 @@
 /* Back Ground Colour*/
 body {
-  background-color: #292F3E;
+  background-color: #fff;
   font-family: "Open Sans", sans-serif;
   border-color: #fff;
   background-image: "/static/images/Background.png";
