--- a/templates/noobnews/base.html
+++ b/templates/noobnews/base.html
@@ -24,7 +24,7 @@
     <title>
       {% block title_block %}Noob News{% endblock %}</title>
   </head>
-  <body background="/static/images/Background.pug" style="background-size: cover;   background-repeat: no-repeat;">
+  <body background="/static/images/Background.png" style="background-attachment: fixed; background-size: cover;   background-repeat: no-repeat;">
     <!-- https://www.etq-amsterdam.com/ -->
     <div id="mySidenav" class="sidenav">
       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
