--- a/templates/noobnews/profile.html
+++ b/templates/noobnews/profile.html
@@ -8,7 +8,16 @@
 
 {% endblock %}
 
-{% block videoG %}    {% endblock %}
+{% block videoG %}
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta http-equiv="X-UA-Compatible" content="ie=edge" />
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"crossorigin="anonymous"></script>
+<script src="{% static "js/top40.js" %}"></script>
+{% endblock %}
 {% block body_block %}
 
 
@@ -17,7 +26,7 @@
   </div>
 
 <!------ User picture and description ---------->
-
+<div style="padding-top: 115px;">
 <link href="http://fontawesome.io/assets/font-awesome/css/font-awesome.css" rel="stylesheet" media="screen">
 <div class="container">
     <div class="row user-menu-container square">
@@ -44,6 +53,7 @@
 
 
     </div>
+</div>
 </div>
 <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto+Condensed'>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
