--- a/templates/noobnews/base.html
+++ b/templates/noobnews/base.html
@@ -64,11 +64,12 @@
       <div class="row">
         <!-- https://codepen.io/CBeghin/pen/HeuiF-->
         {% if user.is_authenticated %}
-          <a href="{% url 'profile' %}" class="user"> <i class="fas fa-user"></i></a>
+        <a href="{% url 'profile' %}" class="user"> <i class="fas fa-user"></i></a>
 
-          <li><a href="{% url 'logout' %}">Logout</a></li>
+          
+       <a href="{% url 'logout' %}" role="button" class="login-button btn btn-outline-light btn-sm">Logout</a>
         {% else %}
-          <a href="{% url 'login' %}" role="button" class="login-button btn btn-outline-light btn-sm">Login</a>
+        <a href="{% url 'login' %}" role="button" class="login-button btn btn-outline-light btn-sm">Login</a>
         {% endif %}
         <!--Search Feacture: results are shown in the cats div! -->
         <form class="search" >
