--- a/templates/noobnews/login.html
+++ b/templates/noobnews/login.html
@@ -55,6 +55,7 @@ Login
           </div>
           <div class="col-md-6 text-right">
             <a class="small" href="/">Return to the Home page</a>
+            <a class="small" href="{% url 'reset_password' %}">Forgot password?</a>
           </div>
         </div>
         <!-- .row// -->
