--- a/templates/noobnews/register.html
+++ b/templates/noobnews/register.html
@@ -20,6 +20,7 @@
 >
     <div class="card-login w-100">
       <article class="card-body">
+          <h4 class="card-title mb-4 mt-1">Register here</h4>
           {% csrf_token %}
         {% crispy user_form %}
         {% crispy profile_form %}
