--- a/templates/noobnews/register.html
+++ b/templates/noobnews/register.html
@@ -1,28 +1,24 @@
-{% extends 'noobnews/base.html' %}
-{% load staticfiles %}
+{% extends 'noobnews/base.html' %} 
+{% load staticfiles %} 
 {% load crispy_forms_tags %}
-{% block title_block %}
-    Register
-{% endblock %}
+{% block title_block %} Register {% endblock %}
 {% block body_block %}
-  <script src="../../static/js/login.js"></script>
-  <style type="text/css">
-    .input-group-text {
-      width: 40px;
-    }
-  </style>
+<script src="../../static/js/login.js"></script>
+<style type="text/css">
+  .input-group-text {
+    width: 40px;
+  }
+</style>
 <div class="row justify-content-center">
   <form
-  id="user_form"
-  method="POST"
-  action="{% url 'register' %}"
-  enctype="multipart/form-data"
->
+    id="user_form"
+    method="POST"
+    action="{% url 'register' %}"
+    enctype="multipart/form-data"
+  >
     <div class="card-login w-100">
       <article class="card-body">
-          {% csrf_token %}
-        {% crispy user_form %}
-        {% crispy profile_form %}
+        {% csrf_token %} {% crispy user_form %} {% crispy profile_form %}
         <div class="row align-items-center">
           <div class="col-md-6">
             <div class="form-group">
