--- a/static/css/noobnews.css
+++ b/static/css/noobnews.css
@@ -256,6 +256,17 @@ body {
   transform: translateX(-80px);
   overflow: hidden;
 }
+.blog-slider__img2 {
+    width: 107%;
+    flex-shrink: 0;
+    height: 480px;
+    box-shadow: 4px 13px 30px 1px rgba(252, 56, 56, 0.2);
+    border-radius: 20px;
+    transform: translateX(-29px) translateY(-26px);
+    /* transform: translateY(-20px); */
+    overflow: hidden;
+}
+
 .blog-slider__img img {
   width: 100%;
   height: 100%;
@@ -1136,5 +1147,90 @@ li {
   }
 }
 
+body {
+  overflow-x: hidden;
+}
+
+.angle {
+  z-index: -1;
+  font-family: Century, sans-serif;
+  position: relative;
+  margin: 0 auto -35px -5%;
+  width: 110%;
+  background: #000000;
+  transform: rotate(3deg);
+  -o-transform: rotate(3deg);
+  -ms-transform: rotate(3deg);
+  -moz-transform: rotate(3deg);
+  -webkit-transform: rotate(3deg);
+}
+
+.angle p {
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 3.5em;
+  font-weight: bold;
+  margin: 0 auto;
+  max-width: 1000px;
+  padding: 2em 100px;
+  color: #f9f9f9;
+  transform: rotate(-3deg);
+  -o-transform: rotate(-3deg);
+  -ms-transform: rotate(-3deg);
+  -moz-transform: rotate(-3deg);
+  -webkit-transform: rotate(-3deg);
+}
+
+
+.angle2 {
+  z-index: -1;
+  font-family: Century Gothic, sans-serif;
+  position: relative;
+  margin: 186px auto -29px -68px;
+  width: 110%;
+  background:#000000;
+  transform: rotate(6deg);
+  -o-transform: rotate(6deg);
+  -ms-transform: rotate(6deg);
+  -moz-transform: rotate(6deg);
+  -webkit-transform: rotate(6deg);
+}
+
+.angle2 p {
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 3.5em;
+  font-weight: bold;
+  margin: 0 auto;
+  max-width: 1000px;
+  padding: 2em 100px;
+  color: white;
+  transform: rotate(-6deg);
+  -o-transform: rotate(-6deg);
+  -ms-transform: rotate(-6deg);
+  -moz-transform: rotate(-6deg);
+  -webkit-transform: rotate(-6deg);
+}
+
+.angle:nth-child(odd) {
+  background: #000000;
+  transform: rotate(-6deg);
+  -o-transform: rotate(-6deg);
+  -ms-transform: rotate(-6deg);
+  -moz-transform: rotate(-6deg);
+  -webkit-transform: rotate(-6deg);
+}
+
+.angle:nth-child(odd) p {
+  transform: rotate(6deg);
+  -o-transform: rotate(6deg);
+  -ms-transform: rotate(6deg);
+  -moz-transform: rotate(6deg);
+  -webkit-transform: rotate(6deg);
+}
+
+.angle:nth-child(even) {
+  background: #bbb;
+}
 
 /*Tabs*/
