--- a/static/css/top40.css
+++ b/static/css/top40.css
@@ -42,6 +42,17 @@
   opacity: 0.9;
 }
 
+.newCards{
+  background: #fff;
+  padding: 5px;
+  margin-left: 30px;
+  margin-right: 30px;  
+  height: 300px;
+  width: 280px;
+  transition: 0.5s;
+  border-radius: 15px 15px;
+}
+
 #hover:hover{
   transform: scale(1.5);
   opacity: 1;
@@ -103,9 +114,9 @@
   float: left;
   position: relative;
   left: -10px;
-  bottom: 0px;
-  height: 160px;
-  width: 150px;
+  bottom: 10px;
+  height: 281px;
+  width: 258px;
   -webkit-box-shadow: 10px 10px 60px 0px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: 10px 10px 60px 0px rgba(0, 0, 0, 0.75);
   box-shadow: 10px 10px 60px 0px rgba(0, 0, 0, 0.75);
