--- a/templates/noobnews/home.html
+++ b/templates/noobnews/home.html
@@ -2,9 +2,18 @@
 {% load staticfiles %}
 <head>
   <meta charset="UTF-8">
-{% block title_block %}{{ videoGame.name }}{% endblock %}
+{% block title_block %}Noob News{% endblock %}
   <meta name="viewport" content="width=device-width, initial-scale=1">
-{% block videoG %}    {% endblock %}
+{% block videoG %}
+<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous"/>
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"crossorigin="anonymous"></script>
+{% endblock %}
 <link rel="stylesheet" href="/static/css/videoGameBootstrap.css">
 <link rel="stylesheet" href="/static/css/noobnews.css">
 </head>
@@ -40,38 +49,61 @@
   </style>
 
 <div class="homecontent">
-
     <div id="myCarousel" class="carousel slide" data-ride="carousel" style="width:100%; height:100%;" >
-
-          <img src="{% for v in top40List %} {{ v.image }}  {% endfor %}" style="width:100%; height:100%;"alt=""">
-          <div class="centered"><h1 style= "text-col">It's dangerous to go alone,</h1>
-          <button>View Top 40 </button> </div>
+      <div class="angle">
+    <p>Top 40</p>
+  </div>
+      <div class="carousel-inner" style="width:inherit; height:inherit;">
+      <img class="item active" style="height: inherit; width:inherit;" src="{{ stream.image }}" alt=""">
+        {% for v in top40List %}
+          <img class="item" src="{{ v.image }}" style="width:100%; height:100%;"alt=""">
+          {% endfor %}
+          <div class="centered"><h1 style="text-col">It's dangerous to go alone,</h1>
+          <button onclick="window.location.href='{% url 'top40' %}'">View Top 40 </button> </div>
+      </div>
     </div>
     <br>
-
     <div id="myCarousel" class="carousel slide" data-ride="carousel" style="width:100%; height:100%;" >
-      <h1>What's Hot</h1>
+      <div class="angle2 different">
+    <p>New Releases</p>
+  </div>
       <div class="seperator"> </div>
     <div class="row">
-  <div class="column">
-    <img src="/static/videogameImages/fallout4.jpg">
+      <a href="{% url 'show_videogame' top1.slug %}">
+        <div class="newCards">
+      <div class="thumbnail2" style="border-radius: 20px / 15px; background-color: transparent;"><img class="left" src="{{ top1.image }}"  style="width:100%; height: 100%; " /></div>
+      </div></a>
+    <a href="{% url 'show_videogame' top2.slug %}">
+      <div class="newCards">
+    <div class="thumbnail2" style="border-radius: 20px / 15px; background-color: transparent;"><img class="left" src="{{ top2.image }}"  style="width:100%; height: 100%; " /></div>
+    </div></a>
+  <a href="{% url 'show_videogame' top3.slug %}">
+    <div class="newCards">
+  <div class="thumbnail2" style="border-radius: 20px / 15px; background-color: transparent;"><img class="left" src="{{ top3.image }}"  style="width:100%; height: 100%; " /></div>
+  </div></a>
+  <!-- <div onclick="window.location.href='{% url 'show_videogame' top1.slug %}'" class="column">
+    <img  style="width:100%; height:100%;" src="{{ top1.image }}">
+  </div> -->
+  <!-- <div class="column">
+    <img onclick="window.location.href='{% url 'show_videogame' top2.slug %}'" style="width:100%; height:100%;" src="{{ top2.image }}">
   </div>
   <div class="column">
-    <img src="/static/videogameImages/farCry5.jpg">
-  </div>
-  <div class="column">
-    <img src="/static/videogameImages/Sun.jpg" >
-  </div>
+    <img onclick="window.location.href='{% url 'show_videogame' top3.slug %}'" style="width:100%; height:100%;" src="{{ top3.image }}" >
+  </div> -->
 </div>
 </div>
-<h1>Stream of the Week</h1>
 <div id="myCarousel" class="carousel slide" data-ride="carousel" style="width:100%; height:100%;" >
-      <img src="/static/videogameImages/breathOfTheWild.jpg" style="width:100%; height:100%;"alt=""">
-      <div class="centered"><h1 style= "text-col">It's dangerous to go alone,</h1>
-      <button>View Top 40 </button> </div>
-
-
-
+  <div class="angle">
+    <p>Stream of the Week</p></div>
+  <div class="blog-slider">
+      <div class="blog-slider__item">
+        <div class="blog-slider__img2">
+          <span><iframe width="100%" height="100%" src="https://www.youtube.com/embed/videoseries?list={{ stream.youtubeurl }}" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></span>
+        </div>
+      </div>
+  </div>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js'></script>
+  <!-- <span><iframe width="100%" height="100%" src="https://player.twitch.tv/?autoplay=false&video={{ stream.speedRun }}" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></span> -->
 </div>
 <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto+Condensed'>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
