--- a/static/css/top40.css
+++ b/static/css/top40.css
@@ -46,7 +46,7 @@
   background: #fff;
   padding: 5px;
   margin-left: 30px;
-  margin-right: 30px;  
+  margin-right: 30px;
   height: 300px;
   width: 280px;
   transition: 0.5s;
@@ -111,6 +111,19 @@
 }
 
 .thumbnail2 {
+  float: left;
+  position: relative;
+  left: -10px;
+  bottom: 15px;
+  height: 174px;
+  width: 177px;
+  -webkit-box-shadow: 10px 10px 60px 0px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 10px 10px 60px 0px rgba(0, 0, 0, 0.75);
+  box-shadow: 10px 10px 60px 0px rgba(0, 0, 0, 0.75);
+  overflow: hidden;
+}
+
+.thumbnail3 {
   float: left;
   position: relative;
   left: -10px;
