Fixed Search Bar

--- a/templates/noobnews/base.html
+++ b/templates/noobnews/base.html
@@ -62,6 +62,7 @@
           <div class="results" id="cats">
           </div>
         </form>
+        <a onclick="searchBar()" class="searchicon"> <i class="fas fa-search"></i></a>
         <a href="{% url 'profile' %}" class="user"> <i class="fas fa-user"></i></a>
       </div>
     </div>
