--- a/static/css/top40.css
+++ b/static/css/top40.css
@@ -34,7 +34,7 @@
 
 /* Content */
 .content2 {
-  background: #fff;
+  background-color: white;
   padding: 5px;
   height: 300px;
   transition: 0.5s;
@@ -80,18 +80,20 @@
   font-size: 18px;
   text-transform: uppercase;
   transition: 0.5s;
+  color: white;
 }
 
 /* Add a grey background color on mouse-over */
 #btn2:hover {
   background-color: rgba(255, 255, 255, 0.98);
+  color: rgba(0,0,0,1);
   transform: scale(1.5);
   opacity: 1;
   transition: 0.5s;
 }
 
 .btn2.active2 {
-  background-color: rgba(255, 255, 255, 0);
+  background-color: rgba(10, 10, 10, 1);
 }
 
 .card2 {
@@ -137,7 +139,14 @@
 }
 
 .plus{
-    float: right;
+  float: right;
+width: 50px;
+height: 50px;
+background-color: rgba(255, 255, 255, 0);
+color: #000;
+border-radius: 50%;
+border-color: darkmagenta;
+    /* float: right;
     width: 70px;
     height: 70px;
     background-color: rgba(255, 255, 255, 0);
@@ -145,7 +154,7 @@
     border: none;
     border-radius: 50%;
     box-shadow:
-        0 0 50px #fff,            /* outer white */
-        15px 0 76px #f0f,        /* outer left magenta */
-        13px 0 47px #0ff;         /* outer right cyan */
+        0 0 50px #fff,
+        15px 0 76px #f0f,
+        13px 0 47px #0ff;*/
 }
