--- a/templates/noobnews/home.html
+++ b/templates/noobnews/home.html
@@ -59,7 +59,7 @@
           <img class="item" src="{{ v.image }}" style="width:100%; height:100%;"alt=""">
           {% endfor %}
           <div class="centered"><h1 style="text-col">It's dangerous to go alone,</h1>
-          <button onclick="window.location.href='{% url 'top40' %}'">View Top 40 </button> </div>
+          <button style="color: black;" onclick="window.location.href='{% url 'top40' %}'">View Top 40 </button> </div>
       </div>
     </div>
     <br>
@@ -109,5 +109,4 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
 <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.3.5/css/swiper.min.css'>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
-<script src="/static/js/index.js"></script>
 {% endblock %}
