--- a/templates/noobnews/videogame.html
+++ b/templates/noobnews/videogame.html
@@ -113,45 +113,65 @@
       </div>
       <br>
 
+      <div class="mypanel"></div>
+        <div class="blog-slider">
+          <div class="blog-slider__wrp swiper-wrapper">
+            <div class="blog-slider__item swiper-slide">
+              <div class="blog-slider__img">
+                <span><iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list={{ videoGame.youtubeurl }}" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></span>
+              </div>
+              <div class="blog-slider__content">
+                <div class="blog-slider__title" id="title"></div>
+                <div class="blog-slider__text" id="desc"></div>
+            </div>
+          </div>
 
-    <div class="mypanel"></div>
-    <div class="blog-slider">
-      <div class="blog-slider__wrp swiper-wrapper">
-        <div class="blog-slider__item swiper-slide">
-          <div class="blog-slider__img">
-              <span><iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list={{ videoGame.youtubeurl }}" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></span>
-          </div>
-          <div class="blog-slider__content">
-            <div class="blog-slider__title" id ="title"></div>
-            <div class="blog-slider__text" id ="desc"></div>
-          </div>
+            <div class="blog-slider__item swiper-slide">
+              <div class="blog-slider__img">
+                <span><iframe width="560" height="315" src="https://player.twitch.tv/?autoplay=false&video={{ videoGame.speedRun }}" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></span>
+              </div>
+              <div class="blog-slider__content">
+                  <div class="blog-slider__title" id='Stitle'></div>
+                <div class="blog-slider__text">
+                  Streamer:
+                  <q id=Speedstreamer></q>
+                  <br>
+                  Number of Views:
+                  <q id=Speedviews></q></div>
+              </div>
+            </div>
+            <div class="blog-slider__item swiper-slide">
+              <div class="blog-slider__img">
+                <div id=frame> </div>              </div>
+              <div class="blog-slider__content">
+                  <div class="blog-slider__title" id='Ttitle'></div>
+                <div class="blog-slider__text">
+                  Streamer:
+                  <q id=streamer></q>
+                  <br>
+                  Number of Views:
+                  <q id=Tviews></q></div>
+              </div>
+            </div>
+
+            <div class="blog-slider__item swiper-slide">
+              <div class="blog-slider__img">
+                <div id=frame> </div>              </div>
+              <div class="blog-slider__content">
+                  <div class="blog-slider__title">Suggestions</div>
+                <div class="blog-slider__text">
+                  If you have any suggestions for changes to any of the content shown above, feel free to contact us!
+                </div>
+              </div>
+            </div>
+
+
+
+
         </div>
-
-        <div class="blog-slider__item swiper-slide">
-          <div class="blog-slider__img">
-            <span><iframe width="560" height="315" src="https://player.twitch.tv/?autoplay=false&video={{ videoGame.speedRun }}" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></span>
-          </div>
-          <div class="blog-slider__content">
-            <div class="blog-slider__title">Twitch Speed Run</div>
-            <div class="blog-slider__text">Speed run record held by BLA BLA BLA</div>
-          </div>
+          <div class="blog-slider__pagination"></div>
         </div>
-        <div class="blog-slider__item swiper-slide">
-          <div class="blog-slider__img">
-            <span><iframe width="560" height="315" src="https://player.twitch.tv/?autoplay=false&video={{ videoGame.speedRun }}" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></span>
-          </div>
-          <div class="blog-slider__content">
-            <div class="blog-slider__title">Twitch: LIVE</div>
-            <div class="blog-slider__text">Speed run record held by BLA BLA BLA</div>
-          </div>
-        </div>
-
-      </div>
-      <div class="blog-slider__pagination"></div>
-    </div>
-
-
-
+        <br>
 
 
 
@@ -196,9 +216,6 @@
         </main>
 
         <div class="content scroll">
-
-
-
           <!--To embred a video you need to https://www.youtube.com/embed/videoseries?list= then the playlist code, the playlist code could be stored in the database -->
           <!--Comments Sections -->
 
@@ -209,9 +226,7 @@
 
             <div class="comment-item">
         <h1>Comment Section</h1>
-        {% if user.is_authenticated %}
-          <button id="button2" name="button2" type="submit"class="button2" style= "margin-left: 12%" onclick = "document.getElementById('AddComment').style.display='block'">Add comment</button>
-        {% endif %}
+      
 
           <div class="separator"></div>
       <div class="comment-item">
@@ -232,8 +247,6 @@
                     {% for u in users%}
                     {% ifequal u.player_tag g.user_id.player_tag %}
                     <img src="/{{u.user_profile_image }}" style="width: 100%; height:120px;" alt="">
-
-
                     {%endifequal%}
                     {%endfor%}
 
@@ -266,6 +279,47 @@
   </nav>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
+
+  <script>
+  console.log("HELLLOOOOOo")
+  var id="client_id=lafleu2a48dpivopblprona7jhjf3j"
+  $.getJSON("https://api.twitch.tv/kraken/videos/top?game={{ videoGame.name }}&"+id,function(obj){
+        for(var i=0;i<1;i++){
+            var x={};
+            x.img=obj.videos[i].preview;
+            x.content=obj.videos[i].description.substring(0,20);
+            x.url=obj.videos[i].url;
+            x.description=obj.videos[i].description;
+            x.id=obj.videos[i]._id;
+            x.author=obj.videos[i].channel.name;
+            x.views=obj.videos[i].views;
+            x.title=obj.videos[i].title.substring(0,20);
+            $("#Tdesc").append(x.content);;
+            $("#Ttitle").append(x.title);;
+            $("#Tviews").append(x.views);;
+            $("#Ttitle").append(x.title);;
+            $("#Turl").append(x.url);;
+            $("#id").append(x.id);;
+            $("#streamer").append(x.author);;
+            iframe="<span><iframe width='560' height='315' src='https://player.twitch.tv/?autoplay=false&video="+ x.id + "'frameborder='0' allow='accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture' allowfullscreen></iframe></span>"
+          $("#frame").append(iframe);;
+       }
+    },"jsonp");
+
+    $.getJSON("https://api.twitch.tv/kraken/videos/{{videoGame.speedRun}}?"+id,function(obj){
+          for(var i=0;i<1;i++){
+              var x={};
+              x.author=obj.channel.name;
+              x.views=obj.views;
+              x.title2=obj.title.substring(0,20);
+              $("#Stitle").append(x.title2);;
+              $("#Speedviews").append(x.views);;
+              $("#Speedstreamer").append(x.author);;
+         }
+      },"jsonp");
+  </script>
+
   <script>
     $.getJSON(' https://www.googleapis.com/youtube/v3/playlistItems?part=snippet&maxResults=1&playlistId={{ videoGame.youtubeurl }}&fields=items/snippet/title,items/snippet/description&key=AIzaSyDu4N6OHRVf81plK5FcmXb1P0L5Ef-nYMY', function(data) {
     $.each(data.items, function(i, item) {
@@ -276,7 +330,6 @@
     });
   });
   </script>
-
 
   <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto+Condensed'>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
