Fixed Search Bar- plus cheats :D

--- a/templates/noobnews/base.html
+++ b/templates/noobnews/base.html
@@ -63,6 +63,7 @@
           </div>
         </form>
         <a href="{% url 'profile' %}" class="user"> <i class="fas fa-user"></i></a>
+        <a onclick='searchBar()' class="searchicon"> <i class="fas fa-search"></i></a>
       </div>
     </div>
 
