--- a/templates/noobnews/videogame.html
+++ b/templates/noobnews/videogame.html
@@ -70,118 +70,104 @@
   <nav>
 
     <div class="mypanel"></div>
-      <div class="blog-slider">
-        <div class="blog-slider__wrp swiper-wrapper">
-          {% ifnotequal videoGame.trivia "" %}
-          <div class="blog-slider__item swiper-slide">
-            <div class="Video-card">
-              <div class="meta">
-                <div class="photo" style="background-image: url({{ videoGame.image }})"></div>
-              </div>
-              <div class="description">
-                <h1>Trivia</h1>
-                <h2>{{ videoGame.name }}</h2>
-                <p >{{ videoGame.trivia }}
-                  <p>
-              </div>
-            </div>
+    <div class="blog-slider">
+      <div class="blog-slider__wrp swiper-wrapper">
+        {% ifnotequal videoGame.cheats "" %}
+        <div class="blog-slider__item swiper-slide">
+          <div class="blog-slider__content">
+            <div class="blog-slider__title">Cheats</div>
+            <div class="blog-slider__text">{{ videoGame.cheats }}</div>
           </div>
-          {% endifnotequal %}
-
-          {% ifnotequal videoGame.cheats "" %}
-          <div class="blog-slider__item swiper-slide">
-            <div class="Video-card">
-              <div class="meta">
-                <div class="photo" style="background-image: url({{ videoGame.image }})"></div>
-              </div>
-              <div class="description">
-                <h1>Cheats</h1>
-                <h2>{{ videoGame.name }}</h2>
-                <p class="scrolld">{{ videoGame.cheats }}
-                  <p>
-              </div>
-            </div>
-          </div>
-          {% endifnotequal %}
-          {% ifnotequal videoGame.easter_eggs "" %}
-          <div class="blog-slider__item swiper-slide">
-            <div class="Video-card">
-              <div class="meta">
-                <div class="photo" style="background-image: url({{ videoGame.image }})"></div>
-              </div>
-              <div class="description">
-                <h1>Easter Eggs</h1>
-                <h2>{{ videoGame.name }}</h2>
-                <p class="scrolld" style =""> {{ videoGame.easter_eggs }}<p>
-              </div>
-            </div>
-          </div>
-          {% endifnotequal %}
-
         </div>
-        <div class="blog-slider__pagination"></div>
+        {% endifnotequal %}
+        {% ifnotequal videoGame.easter_eggs "" %}
+        <div class="blog-slider__item swiper-slide">
+
+          <div class="blog-slider__content">
+            <div class="blog-slider__title">Easter Eggs</div>
+            <div class="blog-slider__text">{{ videoGame.easter_eggs }}</div>
+          </div>
+        </div>
+        {% endifnotequal %}
+  {% ifnotequal videoGame.trivia "" %}
+        <div class="blog-slider__item swiper-slide">
+
+          <div class="blog-slider__content">
+            <div class="blog-slider__title">Trivia</div>
+            <div class="blog-slider__text">{{ videoGame.trivia }}</div>
+          </div>
+        </div>
+          {% endifnotequal %}
+
+
+
+
       </div>
-      <br>
+      <div class="blog-slider__pagination"></div>
+    </div>
+    <br>
 
-      <div class="mypanel"></div>
-        <div class="blog-slider">
-          <div class="blog-slider__wrp swiper-wrapper">
-            <div class="blog-slider__item swiper-slide">
-              <div class="blog-slider__img">
-                <span><iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list={{ videoGame.youtubeurl }}" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></span>
-              </div>
-              <div class="blog-slider__content">
-                <div class="blog-slider__title" id="title"></div>
-                <div class="blog-slider__text" id="desc"></div>
+    <div class="mypanel"></div>
+    <div class="blog-slider">
+      <div class="blog-slider__wrp swiper-wrapper">
+        <div class="blog-slider__item swiper-slide">
+          <div class="blog-slider__img">
+            <span><iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list={{ videoGame.youtubeurl }}" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></span>
+          </div>
+          <div class="blog-slider__content">
+            <div class="blog-slider__title" id="title"></div>
+            <div class="blog-slider__text" id="desc"></div>
+          </div>
+        </div>
+
+        <div class="blog-slider__item swiper-slide">
+          <div class="blog-slider__img">
+            <span><iframe width="560" height="315" src="https://player.twitch.tv/?autoplay=false&video={{ videoGame.speedRun }}" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></span>
+          </div>
+          <div class="blog-slider__content">
+            <div class="blog-slider__title" id='Stitle'></div>
+            <div class="blog-slider__text">
+              Streamer:
+              <q id=Speedstreamer></q>
+              <br>
+              Number of Views:
+              <q id=Speedviews></q></div>
+          </div>
+        </div>
+        <div class="blog-slider__item swiper-slide">
+          <div class="blog-slider__img">
+            <div id=frame> </div>
+          </div>
+          <div class="blog-slider__content">
+            <div class="blog-slider__title" id='Ttitle'></div>
+            <div class="blog-slider__text">
+              Streamer:
+              <q id=streamer></q>
+              <br>
+              Number of Views:
+              <q id=Tviews></q></div>
+          </div>
+        </div>
+
+        <div class="blog-slider__item swiper-slide">
+          <div class="blog-slider__img">
+            <div id=frame> </div>
+          </div>
+          <div class="blog-slider__content">
+            <div class="blog-slider__title">Suggestions</div>
+            <div class="blog-slider__text">
+              If you have any suggestions for changes to any of the content shown above, feel free to contact us!
             </div>
           </div>
-
-            <div class="blog-slider__item swiper-slide">
-              <div class="blog-slider__img">
-                <span><iframe width="560" height="315" src="https://player.twitch.tv/?autoplay=false&video={{ videoGame.speedRun }}" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></span>
-              </div>
-              <div class="blog-slider__content">
-                  <div class="blog-slider__title" id='Stitle'></div>
-                <div class="blog-slider__text">
-                  Streamer:
-                  <q id=Speedstreamer></q>
-                  <br>
-                  Number of Views:
-                  <q id=Speedviews></q></div>
-              </div>
-            </div>
-            <div class="blog-slider__item swiper-slide">
-              <div class="blog-slider__img">
-                <div id=frame> </div>              </div>
-              <div class="blog-slider__content">
-                  <div class="blog-slider__title" id='Ttitle'></div>
-                <div class="blog-slider__text">
-                  Streamer:
-                  <q id=streamer></q>
-                  <br>
-                  Number of Views:
-                  <q id=Tviews></q></div>
-              </div>
-            </div>
-
-            <div class="blog-slider__item swiper-slide">
-              <div class="blog-slider__img">
-                <div id=frame> </div>              </div>
-              <div class="blog-slider__content">
-                  <div class="blog-slider__title">Suggestions</div>
-                <div class="blog-slider__text">
-                  If you have any suggestions for changes to any of the content shown above, feel free to contact us!
-                </div>
-              </div>
-            </div>
-
-
-
-
         </div>
-          <div class="blog-slider__pagination"></div>
-        </div>
-        <br>
+
+
+
+
+      </div>
+      <div class="blog-slider__pagination"></div>
+    </div>
+    <br>
 
 
 
@@ -235,123 +221,121 @@
             <div class="separator"></div>
 
             <div class="comment-item">
-        <h1>Comment Section</h1>
+              <h1>Comment Section</h1>
 
 
-          <div class="separator"></div>
-      <div class="comment-item">
-        <div class="comment-item--inner">
-          {% if genres %}
-          {% for g in genres %}
-          <div class="is-left">
-            <div class="avatar">
-              {% for u in users%}
-                {% if u.player_tag == g.user_id.player_tag %}
-                  <img src="{{ u.user_profile_image.url }}"  style="width: 100%; height:120px;"alt="">
-                {%endif%}
-              {%endfor%}
+              <div class="separator"></div>
+              <div class="comment-item">
+                <div class="comment-item--inner">
+                  {% if genres %}
+                  {% for g in genres %}
+                  <div class="is-left">
+                    <div class="avatar">
+                      {% for u in users%}
+                      {% if u.player_tag == g.user_id.player_tag %}
+                      <img src="{{ u.user_profile_image.url }}" style="width: 100%; height:120px;" alt="">
+                      {%endif%}
+                      {%endfor%}
 
 
-                <div class="is-left">
-                  <div class="avatar">
-                    {% for u in users%}
-                    {% ifequal u.player_tag g.user_id.player_tag %}
-                    <img src="/{{u.user_profile_image }}" style="width: 100%; height:120px;" alt="">
-                    {%endifequal%}
-                    {%endfor%}
+                      <div class="is-left">
+                        <div class="avatar">
+                          {% for u in users%}
+                          {% ifequal u.player_tag g.user_id.player_tag %}
+                          <img src="/{{u.user_profile_image }}" style="width: 100%; height:120px;" alt="">
+                          {%endifequal%}
+                          {%endfor%}
 
-                  </div>
-                </div>
-                <div class="is-right">
-                  <div class="is-right--inner">
-                    <br>
-
-                    <div class="name">{{ g.user_id }}- <small>{{ g.publish_date }}</small>
-                      <div><br>
-                        <div class="blog-slider__text" style=" font-weight: normal;">{{ g.comments }}</div>
-                        <span class="share share-count share-plus">{{ g.comment_rating }}/5</span>
-
-                        <br> <br>
+                        </div>
                       </div>
+                      <div class="is-right">
+                        <div class="is-right--inner">
+                          <br>
 
+                          <div class="name">{{ g.user_id }}- <small>{{ g.publish_date }}</small>
+                            <div><br>
+                              <div class="blog-slider__text" style=" font-weight: normal;">{{ g.comments }}</div>
+                              <span class="share share-count share-plus">{{ g.comment_rating }}/5</span>
+
+                              <br> <br>
+                            </div>
+
+                          </div>
+
+                        </div>
+                        {% endfor %}
+                        {% endif %}
+                      </div>
                     </div>
 
                   </div>
-                  {% endfor %}
-                  {% endif %}
+
                 </div>
-              </div>
-
-            </div>
-
-          </div>
-          <!-- Might need this, probs wont</div> -->
+                <!-- Might need this, probs wont</div> -->
   </nav>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
 
   <script>
-  console.log("HELLLOOOOOo")
-  var id="client_id=lafleu2a48dpivopblprona7jhjf3j"
-  $.getJSON("https://api.twitch.tv/kraken/videos/top?game={{ videoGame.name }}&"+id,function(obj){
-        for(var i=0;i<1;i++){
-            var x={};
-            x.img=obj.videos[i].preview;
-            x.content=obj.videos[i].description.substring(0,20);
-            x.url=obj.videos[i].url;
-            x.description=obj.videos[i].description;
-            x.id=obj.videos[i]._id;
-            x.author=obj.videos[i].channel.name;
-            x.views=obj.videos[i].views;
-            x.title=obj.videos[i].title.substring(0,20);
-            $("#Tdesc").append(x.content);;
-            $("#Ttitle").append(x.title);;
-            $("#Tviews").append(x.views);;
-            $("#Ttitle").append(x.title);;
-            $("#Turl").append(x.url);;
-            $("#id").append(x.id);;
-            $("#streamer").append(x.author);;
-            iframe="<span><iframe width='560' height='315' src='https://player.twitch.tv/?autoplay=false&video="+ x.id + "'frameborder='0' allow='accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture' allowfullscreen></iframe></span>"
-          $("#frame").append(iframe);;
-       }
-    },"jsonp");
+    console.log("HELLLOOOOOo")
+    var id = "client_id=lafleu2a48dpivopblprona7jhjf3j"
+    $.getJSON("https://api.twitch.tv/kraken/videos/top?game={{ videoGame.name }}&" + id, function(obj) {
+      for (var i = 0; i < 1; i++) {
+        var x = {};
+        x.img = obj.videos[i].preview;
+        x.content = obj.videos[i].description.substring(0, 20);
+        x.url = obj.videos[i].url;
+        x.description = obj.videos[i].description;
+        x.id = obj.videos[i]._id;
+        x.author = obj.videos[i].channel.name;
+        x.views = obj.videos[i].views;
+        x.title = obj.videos[i].title.substring(0, 20);
+        $("#Tdesc").append(x.content);;
+        $("#Ttitle").append(x.title);;
+        $("#Tviews").append(x.views);;
+        $("#Ttitle").append(x.title);;
+        $("#Turl").append(x.url);;
+        $("#id").append(x.id);;
+        $("#streamer").append(x.author);;
+        iframe = "<span><iframe width='560' height='315' src='https://player.twitch.tv/?autoplay=false&video=" + x.id +
+          "'frameborder='0' allow='accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture' allowfullscreen></iframe></span>"
+        $("#frame").append(iframe);;
+      }
+    }, "jsonp");
 
-    $.getJSON("https://api.twitch.tv/kraken/videos/{{videoGame.speedRun}}?"+id,function(obj){
-          for(var i=0;i<1;i++){
-              var x={};
-              x.author=obj.channel.name;
-              x.views=obj.views;
-              x.title2=obj.title.substring(0,20);
-              $("#Stitle").append(x.title2);;
-              $("#Speedviews").append(x.views);;
-              $("#Speedstreamer").append(x.author);;
-         }
-      },"jsonp");
+    $.getJSON("https://api.twitch.tv/kraken/videos/{{videoGame.speedRun}}?" + id, function(obj) {
+      for (var i = 0; i < 1; i++) {
+        var x = {};
+        x.author = obj.channel.name;
+        x.views = obj.views;
+        x.title2 = obj.title.substring(0, 20);
+        $("#Stitle").append(x.title2);;
+        $("#Speedviews").append(x.views);;
+        $("#Speedstreamer").append(x.author);;
+      }
+    }, "jsonp");
   </script>
 
   <script>
     $.getJSON(' https://www.googleapis.com/youtube/v3/playlistItems?part=snippet&maxResults=1&playlistId={{ videoGame.youtubeurl }}&fields=items/snippet/title,items/snippet/description&key=AIzaSyDu4N6OHRVf81plK5FcmXb1P0L5Ef-nYMY', function(data) {
-    $.each(data.items, function(i, item) {
-      var videoDes = item['snippet']['description'];
-      var title = item['snippet']['title']
-       $("#desc").append(videoDes);;
-       $("#title").append(title);;
+      $.each(data.items, function(i, item) {
+        var videoDes = item['snippet']['description'];
+        var title = item['snippet']['title']
+        $("#desc").append(videoDes);;
+        $("#title").append(title);;
+      });
     });
-  });
 
-  $.getJSON('https://player.twitch.tv/?autoplay=false&video={{ videoGame.speedRun }}', function(data) {
-  $.each(data.items, function(i, item) {
-    console.log(item);
-    var videoDes = item['snippet']['description'];
-    var title = item['snippet']['title']
-     $("#desc").append(videoDes);;
-     $("#title").append(title);;
-  });
-});
-
-
-
+    $.getJSON('https://player.twitch.tv/?autoplay=false&video={{ videoGame.speedRun }}', function(data) {
+      $.each(data.items, function(i, item) {
+        console.log(item);
+        var videoDes = item['snippet']['description'];
+        var title = item['snippet']['title']
+        $("#desc").append(videoDes);;
+        $("#title").append(title);;
+      });
+    });
   </script>
 
   <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto+Condensed'>
