--- a/static/css/top40.css
+++ b/static/css/top40.css
@@ -19,11 +19,15 @@
 
 /* Create three equal columns that floats next to each other */
 .column2 {
+  padding-right: 0px;
   float: left;
+  margin-bottom: 40px;
   width: 25%;
-  padding: 15px;
-  display: none; /* Hide columns by default */
-}
+  padding-top: 15px;
+  padding-bottom: 15px;
+  padding-left: 16px;
+  display: none;
+  }
 
 /* Clear floats after rows */
 .row2:after {
@@ -41,6 +45,19 @@
   border-radius: 15px 50px;
   opacity: 0.9;
 }
+
+
+/*
+padding-right: 0px;
+float: left;
+margin-bottom: 40px;
+width: 25%;
+padding-top: 15px;
+padding-bottom: 15px;
+padding-left: 16px;
+display: none;
+}
+ */
 
 .newCards{
   background: #fff;
@@ -105,6 +122,43 @@
   -moz-box-shadow: 10px 10px 93px 0px rgba(0, 0, 0, 0.75);
   box-shadow: 10px 10px 93px 0px rgba(0, 0, 0, 0.75);
 }
+#top40Angle{
+  height: 120px;
+  margin: 62px auto 45px -27%;
+}
+#top40Angle p{
+  padding-top: 50px;
+}
+
+#profileAngle{
+  height: 120px;
+  margin: 85px auto 45px -22%;
+}
+
+#profileAngle p{
+  padding-top: 39px;
+  padding-right: 125px;
+}
+
+#h1Style{
+  color:black;
+  margin-right: 70px;
+  padding-bottom: 40px;
+  font-size: 15px;
+}
+
+#h1Style2{
+  font-size: 2rem;
+  margin-top: 0px;
+  color: black;
+}
+
+.try2{
+  background-color: black;
+  -webkit-align-content: center;
+  align-content: center;
+  width: 865px;
+}
 
 .right2 {
   margin-left: 5px;
@@ -123,6 +177,13 @@
   -moz-box-shadow: 10px 10px 60px 0px rgba(0, 0, 0, 0.75);
   box-shadow: 10px 10px 60px 0px rgba(0, 0, 0, 0.75);
   overflow: hidden;
+  border-radius: 50px / 15px;
+  background-color: transparent;
+}
+
+.thumbnail2 img{
+  width:100%;
+  height: 100%;
 }
 
 .thumbnail3 {
