--- a/templates/noobnews/videogame.html
+++ b/templates/noobnews/videogame.html
@@ -232,7 +232,7 @@
     <div class="avatar">
       {% for u in users%}
       {% ifequal  u.player_tag g.user_id.player_tag %}
-      <img src="/{{u.user_profile_image }}"  style="width: 100%; height:120px;"alt="">
+      <img src="/media/{{u.user_profile_image }}"  style="width: 100%; height:120px;"alt="">
 
 
       {%endifequal%}
@@ -262,7 +262,6 @@
 
 
   <script>
-    console.log("HELLLOOOOOo")
     var id = "client_id=lafleu2a48dpivopblprona7jhjf3j"
     $.getJSON("https://api.twitch.tv/kraken/videos/top?game={{ videoGame.name }}&" + id, function(obj) {
       for (var i = 0; i < 1; i++) {
@@ -302,24 +301,26 @@
   </script>
 
   <script>
-    $.getJSON(' https://www.googleapis.com/youtube/v3/playlistItems?part=snippet&maxResults=1&playlistId={{ videoGame.youtubeurl }}&fields=items/snippet/title,items/snippet/description&key=AIzaSyDu4N6OHRVf81plK5FcmXb1P0L5Ef-nYMY', function(data) {
-      $.each(data.items, function(i, item) {
-        var videoDes = item['snippet']['description'];
-        var title = item['snippet']['title']
-        $("#desc").append(videoDes);;
-        $("#title").append(title);;
-      });
-    });
 
-    $.getJSON('https://player.twitch.tv/?autoplay=false&video={{ videoGame.speedRun }}', function(data) {
-      $.each(data.items, function(i, item) {
-        console.log(item);
-        var videoDes = item['snippet']['description'];
-        var title = item['snippet']['title']
-        $("#desc").append(videoDes);;
-        $("#title").append(title);;
-      });
+  $.getJSON(' https://www.googleapis.com/youtube/v3/playlistItems?part=snippet&maxResults=1&playlistId={{ videoGame.youtubeurl }}&fields=items/snippet/title,items/snippet/description&key=AIzaSyDu4N6OHRVf81plK5FcmXb1P0L5Ef-nYMY', function(data) {
+    $.each(data.items, function(i, item) {
+      var videoDes = item['snippet']['description'];
+      var title = item['snippet']['title']
+      $("#desc").append(videoDes);;
+      $("#title").append(title);;
     });
+  });
+
+  $.getJSON('https://player.twitch.tv/?autoplay=false&video={{ videoGame.speedRun }}', function(data) {
+    $.each(data.items, function(i, item) {
+      console.log(item);
+      var videoDes = item['snippet']['description'];
+      var title = item['snippet']['title']
+      $("#desc").append(videoDes);;
+      $("#title").append(title);;
+    });
+  });
+
   </script>
 
   <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto+Condensed'>
