--- a/templates/noobnews/home.html
+++ b/templates/noobnews/home.html
@@ -58,7 +58,7 @@
         {% for v in top40List %}
           <img class="item" src="{{ v.image }}" style="width:100%; height:100%;"alt=""">
           {% endfor %}
-          <div class="centered"><h1 style="text-col">It's dangerous to go alone,</h1>
+          <div class="centered"><h1 style="text-col"></h1>
           <button style="color: black;" onclick="window.location.href='{% url 'top40' %}'">View Top 40 </button> </div>
       </div>
     </div>
