library working, still one bug

--- a/templates/noobnews/profile.html
+++ b/templates/noobnews/profile.html
@@ -32,7 +32,7 @@
                  
                   
                     <button type="submit" class="btn btn-labeled btn-info">
-                      <span class="btn-label"></span>Update my information
+                      <span class="btn-label"></span>Update information
                     </button>
                  
                 </form>
