Fixed small bugs

--- a/templates/noobnews/profile.html
+++ b/templates/noobnews/profile.html
@@ -53,6 +53,7 @@
   </div>
 </div>
 
+{% if game %}
  <!------ User library ---------->
  <br /><br /><br /><br />
 <div class="col-md-6 img">
@@ -209,6 +210,7 @@
 
 {% endfor %} 
 
+{% endif %}
 
 
   
